...
    "1 yr" : {

    },
    "1 yr+" : {

    },
    "2 yrs" : {

    },
    "2 yrs+" : {

    },
    "30 and 7 days before a warranty ends" : {
...
    "Add Spots" : {

    },
    "Add a Room" : {

    },
    "Add a Warranty" : {

    },
    "Add a few things and Nook will tell you where they are." : {

    },
    "Add a tag" : {
...
    "Add container" : {

    },
    "Add date" : {

    },
    "Add item" : {

    },
    "Add model" : {

    },
    "Add one to any item and we’ll remind you before it ends." : {

    },
    "Add photo" : {

    },
    "Add return date" : {

    },
    "Add room" : {
...
    "Cancel" : {

    },
    "Cancel naming" : {

    },
    "Capture" : {

    },
    "Category" : {

    },
    "Change Color and Symbol" : {
...
    "Choose a room" : {

    },
    "Choose from Contacts" : {

    },
    "Choose from Photos" : {

    },
    "Clay" : {

    },
    "Clear" : {
...
    "Ended %@." : {

    },
    "Ending" : {

    },
    "Ending in 30 days" : {

    },
    "Ending · %lld days left" : {
      "localizations" : {
        "en" : {
          "variations" : {
...
    "Ends today" : {

    },
    "Enter it myself" : {

    },
    "Espresso machine" : {

    },
    "Everything stays on your device. No account." : {
      "comment" : "O-01. Names the device (01 §1.3, D29).",
      "localizations" : {
        "en" : {
...
              }
            }
          }
        }
      }
    },
    "Expired" : {

    },
    "Fill the frame with the sticker." : {

    },
    "Filters" : {
...
    "Last seen" : {

    },
    "Lavender" : {

    },
    "Lend" : {

    },
    "Lend %@" : {

    },
    "Lend Something" : {
...
    "Lent" : {

    },
    "Lent on" : {

    },
    "Lent out" : {

    },
    "Lent out only" : {

    },
    "Lent to %@." : {
...
    "Mark Not Private" : {

    },
    "Mark Private" : {

    },
    "Mark Returned" : {

    },
    "Marked Private." : {

    },
    "Mint" : {
...
    "Moved to %@." : {

    },
    "Moved with Siri" : {

    },
    "Name" : {

    },
    "Name suggestions" : {

    },
    "New Category…" : {

    },
    "New Container" : {

    },
    "New Item" : {

    },
    "New Room" : {

    },
    "New Spot" : {
...
    "Nothing’s out right now" : {

    },
    "Nothing’s out right now." : {

    },
    "Notifications" : {

    },
    "OK" : {

    },
    "Ocean" : {
...
    "Only items priced in %@." : {

    },
    "Open %@" : {

    },
    "Open Settings" : {

    },
    "Opens the receipt" : {

    },
    "Other" : {
...
    "Remind me" : {

    },
    "Reminders" : {

    },
    "Reminders Off" : {

    },
    "Reminders On" : {

    },
    "Reminders are off for Nook" : {

    },
    "Reminders are off for Nook." : {

    },
    "Reminders off" : {

    },
    "Reminders off." : {

    },
    "Reminders on." : {

    },
    "Remove" : {
...
    "Rose" : {

    },
    "Sage" : {

    },
    "Save" : {

    },
    "Save Receipt" : {

    },
    "Save Search" : {
...
    "Search rooms and spots" : {

    },
    "See All" : {

    },
    "See all warranties" : {

    },
    "Select" : {

    },
    "Select All" : {
...
    "Tagged %lld items." : {

    },
    "Tags" : {

    },
    "Take Photo" : {

    },
    "Taken out of its room" : {

    },
    "Tap a date" : {
...
    "Value to" : {

    },
    "View" : {

    },
    "Warranties" : {

    },
    "Warranties ending soon" : {

    },
    "Warranty" : {
...
    "Which line is the serial?" : {

    },
    "Which rooms do you have?" : {

    },
    "Who has it?" : {

    },
    "Yes, you have %lld." : {

    },
    "You can restore it from Recently Deleted for 30 days." : {
...
