...
    "Take Photo" : {

    },
    "Try Again" : {
      "comment" : "Button on an error state."
    },
    "Undo" : {
      "comment" : "Button on a toast that reverses the last action."
    },
    "Unlock Pro" : {

    },
    "Value hidden" : {
...
